--- a/front/index.html
+++ b/front/index.html
@@ -1,5 +1,5 @@
-<!DOCTYPE html>
-<html>
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 	<meta http-equiv="Content-Type"content="text/html; charset=utf-8"/>
 	<link type="text/css" rel="stylesheet" href="style/reset.css" >
@@ -354,13 +354,13 @@
 					<div class="logo fl"></div>
 					<ul class="nav_list clearfix fl">
 						<li>
+							<a href="#">首页</a>
+						</li>
+						<li>
 							<a href="#">服装</a>
 						</li>
 						<li>
-							<a href="#">手机</a>
-						</li>
-						<li>
-							<a href="#">电脑</a>
+							<a href="#">电子设备</a>
 						</li>
 						<li>
 							<a href="#">家具</a>
