--- a/front/sub.html
+++ b/front/sub.html
@@ -49,13 +49,13 @@
 					<div class="logo fl"></div>
 					<ul class="nav_list clearfix fl">
 						<li>
+							<a href="#">首页</a>
+						</li>
+						<li>
 							<a href="#">服装</a>
 						</li>
 						<li>
-							<a href="#">手机</a>
-						</li>
-						<li>
-							<a href="#">电脑</a>
+							<a href="#">电子设备</a>
 						</li>
 						<li>
 							<a href="#">家具</a>
