--- a/front/registerseller.html
+++ b/front/registerseller.html
@@ -81,7 +81,7 @@
     </script>  
 </head> 
 
-<body " onload="javascript:focusOnUsername();" >
+<body " onload="javascript:focusOnUsername();">
 	<div id="header">
 			<div class="topbar">
 				<div class="comWidth2">
@@ -113,17 +113,20 @@
 				</div>
 			</div>
 		</div>
-	 <form action="#0" name="loginForm" id="logForm">
+	 <form action="#0" name="loginForm" id="logForm"; margin:0 auto>
 	 <div  id="loginFormMain">
 		 <table  style="width:468px;height:262px;background-color: #d2cfcf;text-align: center;">
 			  <tr>
-			  	 <th colspan="2" align="center" >用户注册</th>
+			  	 <th colspan="2" align="center" >卖家注册</th>
 			  </tr>
 			  <tr>
-			      <td>用户名: <input type="text" style="width: 200px;height: 30px;"  name="username"></td>
+			      <td>用 户 名: <input type="text" style="width: 200px;height: 30px;"  name="username"></td>
 			  </tr>
 			  <tr>
-			      <td>密  码: <input type="password"  style="width: 200px;height: 30px;"  name="password"></td>
+			      <td>电子邮箱: <input type="text" style="width: 200px;height: 30px;"  name="email"></td>
+			  </tr>
+			  <tr>
+			      <td>密     码 : <input type="password"  style="width: 200px;height: 30px;"  name="password"></td>
 			  </tr>
 			  <tr>
 			      <td>确认密码: <input type="password"  style="width: 200px;height: 30px;"  name="confirm"></td>
