--- a/front/index.html
+++ b/front/index.html
@@ -50,7 +50,7 @@
 				</div>
 			</div>
 		</div>
-		<div class="navMenu nav_menu_show2">
+		<div class="navMenu nav_menu_show3">
 			<div class="nav_menu_list">
 				<ul class="nav_menu_spec">
 					<li>
@@ -89,7 +89,7 @@
 				</ul>
 			</div>
 		</div>
-		<div class="navMenu nav_menu_show3">
+		<div class="navMenu nav_menu_show4">
 			<div class="nav_menu_list">
 				<ul class="nav_menu_spec">
 					<li>
@@ -139,7 +139,7 @@
 				</ul>
 			</div>
 		</div>
-		<div class="navMenu nav_menu_show4">
+		<div class="navMenu nav_menu_show5">
 			<div class="nav_menu_list">
 				<ul class="nav_menu_spec">
 					<li>
@@ -178,225 +178,28 @@
 				</ul>
 			</div>
 		</div>
-		<div class="navMenu nav_menu_show5">
-			<div class="nav_menu_list">
-				<ul class="nav_menu_spec">
-					<li>
-						<a href="#" class="nav_menu_list_img">
-							<img src="images/nav_menu5_1.jpg" />
-						</a>
-						<p>
-							<a href="#" class="nav_menu_list_title">小米手机4c</a>
-						</p>
-						<p>
-							<a href="#" class="nav_menu_list_price">1299元起</a>
-						</p>
-					</li>
-					<li>
-						<a href="#" class="nav_menu_list_img">
-							<img src="images/nav_menu5_2.jpg" />
-						</a>
-						<p>
-							<a href="#" class="nav_menu_list_title">小米手机4c</a>
-						</p>
-						<p>
-							<a href="#" class="nav_menu_list_price">1299元起</a>
-						</p>
-					</li>
-					<li>
-						<a href="#" class="nav_menu_list_img">
-							<img src="images/nav_menu5_3.jpg" />
-						</a>
-						<p>
-							<a href="#" class="nav_menu_list_title">小米手机4c</a>
-						</p>
-						<p>
-							<a href="#" class="nav_menu_list_price">1299元起</a>
-						</p>
-					</li>
-					<li>
-						<a href="#" class="bdr_0 nav_menu_list_img ">
-							<img src="images/nav_menu5_4.jpg" />
-						</a>
-						<p>
-							<a href="#" class="nav_menu_list_title">小米手机4c</a>
-						</p>
-						<p>
-							<a href="#" class="nav_menu_list_price">1299元起</a>
-						</p>
-					</li>
-				</ul>
-			</div>
-		</div>
-		<div class="navMenu nav_menu_show6">
-			<div class="nav_menu_list">
-				<ul class="nav_menu_spec">
-					<li>
-						<a href="#" class="nav_menu_list_img">
-							<img src="images/nav_menu6_1.jpg" />
-						</a>
-						<p>
-							<a href="#" class="nav_menu_list_title">小米手机4c</a>
-						</p>
-						<p>
-							<a href="#" class="nav_menu_list_price">1299元起</a>
-						</p>
-					</li>
-					<li>
-						<a href="#" class="nav_menu_list_img">
-							<img src="images/nav_menu6_2.jpg" />
-						</a>
-						<p>
-							<a href="#" class="nav_menu_list_title">小米手机4c</a>
-						</p>
-						<p>
-							<a href="#" class="nav_menu_list_price">1299元起</a>
-						</p>
-					</li>
-					<li>
-						<a href="#" class="nav_menu_list_img">
-							<img src="images/nav_menu6_3.jpg" />
-						</a>
-						<p>
-							<a href="#" class="nav_menu_list_title">小米手机4c</a>
-						</p>
-						<p>
-							<a href="#" class="nav_menu_list_price">1299元起</a>
-						</p>
-					</li>
-					<li>
-						<a href="#" class="nav_menu_list_img">
-							<img src="images/nav_menu6_4.jpg" />
-						</a>
-						<p>
-							<a href="#" class="nav_menu_list_title">小米手机4c</a>
-						</p>
-						<p>
-							<a href="#" class="nav_menu_list_price">1299元起</a>
-						</p>
-					</li>
-					<li>
-						<a href="#" class="nav_menu_list_img">
-							<img src="images/nav_menu6_5.jpg" />
-						</a>
-						<p>
-							<a href="#" class="nav_menu_list_title">小米手机4c</a>
-						</p>
-						<p>
-							<a href="#" class="nav_menu_list_price">1299元起</a>
-						</p>
-					</li>
-					<li>
-						<a href="#" class="bdr_0 nav_menu_list_img ">
-							<img src="images/nav_menu6_6.jpg" />
-						</a>
-						<p>
-							<a href="#" class="nav_menu_list_title">小米手机4c</a>
-						</p>
-						<p>
-							<a href="#" class="nav_menu_list_price">1299元起</a>
-						</p>
-					</li>
-				</ul>
-			</div>
-		</div>
+		
 		<div class="wrap_inner_top">
 			<div class="container comWidth clearfix">
 				<div class="nav clearfix">
 					<div class="logo fl"></div>
 					<ul class="nav_list clearfix fl">
 						<li>
-							<a href="#">首页</a>
+							<a href="index.html">首页</a>
 						</li>
 						<li>
-							<a href="#">服装</a>
+							<a href="search.html">搜索</a>
 						</li>
 						<li>
-							<a href="#">电子设备</a>
+							<a href="subClothes.html">服装</a>
 						</li>
 						<li>
-							<a href="#">家具</a>
+							<a href="subElectro.html">电子设备</a>
 						</li>
-						
+						<li>
+							<a href="subFurniture.html">家具</a>
+						</li>
 					</ul>
-
-					<div class="search fl">
-						<div class="search_box">
-							<form name="searchForm">
-								<input type="text" class="search_txt fl" name="searchcontent"/>
-								<input type="submit" class="search_btn fl" value="" />
-								<!-- <a href="/search.html" class="search_btn fl" value="">搜索</a> -->
-								<div class="hot_word1">
-									<a href="#">手环</a>
-								</div>
-								<div class="hot_word2">
-									<a href="#">小米手机4</a>
-								</div>
-							</form>
-						</div>
-						<ul class="search_extra">
-							<li>
-								<a href="#">
-									<span class="spec_name">移动电源</span>
-									<span class="result">约有22件</span>
-								</a>
-							</li>
-							<li>
-								<a href="#">
-									<span class="spec_name">空气净化器</span>
-									<span class="result">约有2件</span>
-								</a>
-							</li>
-							<li>
-								<a href="#">
-									<span class="spec_name">小米手环</span>
-									<span class="result">约有5件</span>
-								</a>
-							</li>
-							<li>
-								<a href="#">
-									<span class="spec_name">WiFi</span>
-									<span class="result">约有7件</span>
-								</a>
-							</li>
-							<li>
-								<a href="#">
-									<span class="spec_name">自拍杆</span>
-									<span class="result">约有1件</span>
-								</a>
-							</li>
-							<li>
-								<a href="#">
-									<span class="spec_name">小米体重秤</span>
-									<span class="result">约有134件</span>
-								</a>
-							</li>
-							<li>
-								<a href="#">
-									<span class="spec_name">小蚁摄像机</span>
-									<span class="result">约有6件</span>
-								</a>
-							</li>
-							<li>
-								<a href="#">
-									<span class="spec_name">运动相机</span>
-									<span class="result">约有22件</span>
-								</a>
-							</li>
-							<li>
-								<a href="#">
-									<span class="spec_name">智能插座</span>
-									<span class="result">约有4件</span>
-								</a>
-							</li>
-							<li>
-								<a href="#">
-									<span class="spec_name">配件优惠套装</span>
-									<span class="result">约有11件</span>
-								</a>
-							</li>
-						</ul>
-					</div>
 
 				</div>
 
@@ -450,12 +253,11 @@
 				</div>
 				<div class="channel comWidth clearfix">
 					
+				</div>
 			</div>
 		</div>
-
-		
 	</div>
-</div>
+
 <div id="footer">
 	<div class="footer_top comWidth">
 		<div class="footer_top_service">
@@ -514,7 +316,7 @@
 							<a href="#">新浪微博</a>
 						</li>
 						<li>
-							<a href="#">小米部落</a>
+							<a href="#">Facebook</a>
 						</li>
 						<li>
 							<a href="#">官方微信</a>
