--- a/front/registerseller.html
+++ b/front/registerseller.html
@@ -1,6 +1,6 @@
 <html>  
 <head>  
-    <title>登录界面</title>  
+    <title>卖家注册界面</title>  
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">  
     <link rel="stylesheet" type="text/css" href="style/main.css">
 	<link rel="stylesheet" type="text/css" href="style/style.css">
@@ -32,7 +32,7 @@
             //调整画布大小和登陆框位置  
             setViewSize();  
             //默认聚焦在输入框上  
-            if (document.loginForm) {  
+            if (document.registerForm) {  
                 var usernameInput = document.loginForm.username;  
                 if (usernameInput) {  
                     usernameInput.focus();  
@@ -44,7 +44,7 @@
         //检查用户输入  
         function checkLogin(){  
             if(checkUsername() && checkPassword()){  
-            	inputToJson();
+            	
                 return true;  
              }          
             return false;  
@@ -69,15 +69,7 @@
                 return false;  
             }  
         }  
-        function inputToJson(){
-			var obj = {};
-			$('form[name=loginForm] input').find("input:text,:password").map(function() {
-			    obj[this["name"]] = this.value;
-			    return;
-			});
-			json = JSON.stringify(obj);
-			
-		}
+        
     </script>  
 </head> 
 
@@ -113,9 +105,10 @@
 				</div>
 			</div>
 		</div>
-	 <form action="#0" name="loginForm" id="logForm"; margin:0 auto>
+	 
 	 <div  id="loginFormMain">
 		 <table  style="width:468px;height:262px;background-color: #d2cfcf;text-align: center;">
+		 	  <form action="#0" name="registerSellForm"; margin:0 auto>
 			  <tr>
 			  	 <th colspan="2" align="center" >卖家注册</th>
 			  </tr>
@@ -131,9 +124,11 @@
 			  <tr>
 			      <td>确认密码: <input type="password"  style="width: 200px;height: 30px;"  name="confirm"></td>
 			  </tr>
+			  </form>
 			  <tr>
-			      <td align="center" ><input  formmethod="post" type="submit" style="cursor: pointer;font-style: inherit;" name="submit"  onclick="return checkLogin();" value="登录" > 
-			          <input type="reset"  style="cursor: pointer;" name=reset  value="重置"></td>
+			      <td align="center" >
+			      	<input type="submit" style="cursor: pointer;font-style: inherit;" class="registersell_btn" value="登录" > 
+			        <input type="reset"  style="cursor: pointer;" name="reset" value="重置"></td>
 			  </tr>
 		 </table>
 	 </div>
