--- a/front/subClothes.html
+++ b/front/subClothes.html
@@ -5,9 +5,10 @@
 	<link type="text/css" rel="stylesheet" href="style/reset.css" >
 	<link rel="stylesheet" type="text/css" href="style/main.css">
 	<link rel="stylesheet" type="text/css" href="style/style.css">
+	<link href="style/bootstrap.min.css" rel="stylesheet" />
 	<script type="text/javascript" src="js/jquery-2.1.4.js"></script>
 	<script type="text/javascript" src="js/js.js"></script>
-	<title>首页</title>
+	<title>服装</title>
 </head>
 <body>
 	<div id="wrap">
@@ -38,38 +39,241 @@
 							<span class="sep">|</span>
 							<a href="register.html">注册</a>
 						</div>
+						<div class="buy_car fl">
+							<img src="images/shopcar.png" class="buy_car_img fr"/>
+						</div>
 					</div>
 				</div>
 			</div>
 		</div>
-
+		<div class="navMenu nav_menu_show3">
+			<div class="nav_menu_list">
+				<ul class="nav_menu_spec">
+					<li>
+						<a href="#" class="nav_menu_list_img">
+							<img src="images/LV2.jpg" />
+						</a>
+						<p>
+							<a href="#" class="nav_menu_list_title">LV皮包</a>
+						</p>
+						<p>
+							<a href="#" class="nav_menu_list_price">10299元</a>
+						</p>
+					</li>
+					<li>
+						<a href="#" class="nav_menu_list_img">
+							<img src="images/LV3.jpg" />
+						</a>
+						<p>
+							<a href="#" class="nav_menu_list_title">LV时尚手袋</a>
+						</p>
+						<p>
+							<a href="#" class="nav_menu_list_price">12990元</a>
+						</p>
+					</li>
+					<li>
+						<a href="#" class="nav_menu_list_img">
+							<img src="images/LV4.jpg" />
+						</a>
+						<p>
+							<a href="#" class="nav_menu_list_title">针织衫</a>
+						</p>
+						<p>
+							<a href="#" class="nav_menu_list_price">2099元</a>
+						</p>
+					</li>
+				</ul>
+			</div>
+		</div>
+		<div class="navMenu nav_menu_show4">
+			<div class="nav_menu_list">
+				<ul class="nav_menu_spec">
+					<li>
+						<a href="#" class="nav_menu_list_img">
+							<img src="images/nav_menu3_1.jpg" />
+						</a>
+						<p>
+							<a href="#" class="nav_menu_list_title">小米手机4c</a>
+						</p>
+						<p>
+							<a href="#" class="nav_menu_list_price">299元</a>
+						</p>
+					</li>
+					<li>
+						<a href="#" class="nav_menu_list_img">
+							<img src="images/nav_menu4_2.jpg" />
+						</a>
+						<p>
+							<a href="#" class="nav_menu_list_title">显示屏</a>
+						</p>
+						<p>
+							<a href="#" class="nav_menu_list_price">500元</a>
+						</p>
+					</li>
+					<li>
+						<a href="#" class="nav_menu_list_img">
+							<img src="images/nav_menu4_3.jpg" />
+						</a>
+						<p>
+							<a href="#" class="nav_menu_list_title">松下电视</a>
+						</p>
+						<p>
+							<a href="#" class="nav_menu_list_price">998元</a>
+						</p>
+					</li>
+					<li>
+						<a href="#" class="bdr_0 nav_menu_list_img ">
+							<img src="images/nav_menu4_4.jpg" />
+						</a>
+						<p>
+							<a href="#" class="nav_menu_list_title">联想电脑</a>
+						</p>
+						<p>
+							<a href="#" class="nav_menu_list_price">1299元</a>
+						</p>
+					</li>
+				</ul>
+			</div>
+		</div>
+		<div class="navMenu nav_menu_show5">
+			<div class="nav_menu_list">
+				<ul class="nav_menu_spec">
+					<li>
+						<a href="#" class="nav_menu_list_img">
+							<img src="images/fur1.jpg" />
+						</a>
+						<p>
+							<a href="#" class="nav_menu_list_title">椅子</a>
+						</p>
+						<p>
+							<a href="#" class="nav_menu_list_price">50元</a>
+						</p>
+					</li>
+					<li>
+						<a href="#" class="nav_menu_list_img">
+							<img src="images/fur2.png" />
+						</a>
+						<p>
+							<a href="#" class="nav_menu_list_title">单人沙发</a>
+						</p>
+						<p>
+							<a href="#" class="nav_menu_list_price">60元</a>
+						</p>
+					</li>
+					<li>
+						<a href="#" class="bdr_0 nav_menu_list_img ">
+							<img src="images/fur3.jpg" />
+						</a>
+						<p>
+							<a href="#" class="nav_menu_list_title">长沙发</a>
+						</p>
+						<p>
+							<a href="#" class="nav_menu_list_price">99元</a>
+						</p>
+					</li>
+				</ul>
+			</div>
+		</div>
+		
 		<div class="wrap_inner_top">
 			<div class="container comWidth clearfix">
 				<div class="nav clearfix">
 					<div class="logo fl"></div>
 					<ul class="nav_list clearfix fl">
 						<li>
-							<a href="#">首页</a>
+							<a href="index.html">首页</a>
 						</li>
 						<li>
-							<a href="#">服装</a>
+							<a href="search.html">搜索</a>
 						</li>
 						<li>
-							<a href="#">电子设备</a>
+							<a href="subClothes.html">服装</a>
 						</li>
 						<li>
-							<a href="#">家具</a>
+							<a href="subElectro.html">电子设备</a>
 						</li>
 						<li>
-							<a href="#">家电</a>
-						</li>
-						<li>
-							<a href="#">二手车</a>
+							<a href="subFurniture.html">家具</a>
 						</li>
 					</ul>
 				</div>
 			</div>
+
+		<div class="channel comWidth clearfix">
+					
+		</div>
+
+		<div class="col-xs-12">
+			<div class="content", id="search_result">
+					<div class="row">
+						<div class="col-xs-12">
+							<h3 class="header smaller lighter blue">商品显示</h3>
+							<div class="table-responsive">
+								<table id="sample-table-2" class="table table-striped table-bordered table-hover">
+									<thead>
+										<tr>
+											<th>商品名称</th>
+											<th>价格</th>
+											<th>剩余量</th>
+											<th>商品描述</th>
+										</tr>
+									</thead>
+
+									<tbody id="ClothesResult">
+										
+									</tbody>
+								</table>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
 		</div>
 	</div>
+
+	<script type="text/javascript">
+		$(document).ready(function(){
+        	updateXMLDoc();
+		});
+
+		function updateXMLDoc()
+		{
+			var xmlhttp;
+			var result;
+			if (window.XMLHttpRequest)
+			{// code for IE7+, Firefox, Chrome, Opera, Safari
+			    xmlhttp=new XMLHttpRequest();
+			}
+			else
+			{// code for IE6, IE5
+			    xmlhttp=new ActiveXObject("Microsoft.XMLHTTP");
+			}
+			xmlhttp.onreadystatechange=function()
+			{
+			    if (xmlhttp.readyState==4 && xmlhttp.status==200)
+			    {
+			    // document.getElementById("myDiv").innerHTML=xmlhttp.responseText;
+			    	console.log(xmlhttp.responseText);
+			        result=JSON.parse(xmlhttp.responseText);
+			        var length  = Object.keys(result.data).length
+			        console.log(length);
+			        innerHtml(result.data, length);
+			    }
+			}
+			xmlhttp.open("GET","http://111.230.233.124/market/index.php/home/goods/searchGoods?type="+"衣",true);
+			xmlhttp.setRequestHeader('Content-Type','application/x-www-form-urlencoded');  
+			xmlhttp.send();
+			
+		}
+
+		function innerHtml(message, length) { 
+			var result='';
+			for(i=1; i<length; i++){
+				result+='<tr><td><a href="#">'+message[i].title+'</a></td><td>'+message[i].price+'</td><td class="hidden-480">'+message[i].overplus+'</td><td>'+message[i].intro+'</td></tr>';
+			}
+		    document.getElementById("ClothesResult").innerHTML=result;
+		}
+	</script>
+
 </body>
 </html>
