--- a/front/subClothes.html
+++ b/front/subClothes.html
@@ -17,7 +17,7 @@
 				<div class="comWidth2">
 					<ul class="leftArea">
 						<li>
-							<a href="#">玫瑰网：二手玫瑰，手有余香</a>
+							<a href="index.html">玫瑰网：二手玫瑰，手有余香</a>
 						</li>
 						<li>
 							<span class="sep">|</span>
@@ -34,7 +34,7 @@
 						
 					</ul>
 					<div class="rightArea">
-						<div class="login fl">
+						<div class="login fl" id="iflogin">
 							<a href="login.html">登陆</a>
 							<span class="sep">|</span>
 							<a href="register.html">注册</a>
@@ -234,7 +234,17 @@
 	<script type="text/javascript">
 		$(document).ready(function(){
         	updateXMLDoc();
+        	update();
 		});
+
+		function update(){
+	    	if(sessionStorage.customerId !== undefined && sessionStorage.is_sale == 1){
+	    		document.getElementById("iflogin").innerHTML='<a href="jqgrid.html">我的小铺</a>';
+	    	}
+	    	else if(sessionStorage.customerId !== undefined){
+	    		document.getElementById("iflogin").innerHTML='';
+	    	}
+	    }
 
 		function updateXMLDoc()
 		{
