--- a/front/search.html
+++ b/front/search.html
@@ -13,7 +13,7 @@
 </head>
 <body>
 	<script type="text/javascript">
-
+		
 		function shopcarjumpTo(p, url) { 
 	   		var customerId=sessionStorage.customerId; 
 	   		console.log(customerId)
@@ -228,7 +228,7 @@
 						<div class="search_box">
 							<form name="searchForm">
 								<input type="text" class="search_txt fl" name="searchcontent"/>
-								<input type="submit" class="search_btn fl" value=""/>
+								<input type="submit" class="search_btn fl" value="" />
 								<div class="hot_word1">
 									<a href="#">手环</a>
 								</div>
@@ -266,6 +266,14 @@
 										
 									</tbody>
 								</table>
+							</div>
+							<div class="row">
+								<button id="previous">
+									上一页
+								</button>
+								<button id="next">
+									下一页
+								</button>
 							</div>
 						</div>
 					</div>
